2006-02-03 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: bug #329636

2006-01-28 Dom Lachowicz <cinamod@hotmail.com>

	* Update documentation. Should be near 100% symbol coverage.
	
2006-01-19 Rob Staudinger <robert.staudinger@gmail.com>

	* add gtk-doc.make for doc build

2006-01-17 Rob Staudinger <robert.staudinger@gmail.com>

	* configure.in: re-enable gtk-doc build
	* Makefile.am: dist and cvs add gtk-doc.make
	* doc/Makefile.am: include gtk-doc.make instead of copying the targets

2006-01-16 Rob Staudinger <robert.staudinger@gmail.com>

	* test-display.c: Bug 327177 - add Zoom toolbar

2006-01-16 Dom Lachowicz <cinamod@hotmail.com>
	
	* TODO: update to reflect work done and future goals
	
2006-01-12 Dom Lachowicz <cinamod@hotmail.com>

	* TODO: updated our roadmap
	
2006-01-11 Dom Lachowicz <cinamod@hotmail.com>

	* Bug #326485 merits a 2.13.5 release

2006-01-12 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: bug #326485, also some code cleanups

2006-01-10 Dom Lachowicz <cinamod@hotmail.com>

	* 2.13.4
	
2006-01-10 Dom Lachowicz <cinamod@hotmail.com>

	* Public functions: added g_return_XXX() sneeze-guards
	
2006-01-07 Dom Lachowicz <cinamod@hotmail.com>

	* librsvg.def: List of symbols that we export
	* Makefile.am: Use libtool's -export-symbols to try to only export
	the above symbols (on platforms where it's supported).
	
2005-12-31 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.h: Bug 325357 - compile fails when rsvg-cairo.h is #included. (Callum McKenzie)
	
2005-12-20 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Mozilla-config fixes so that it works with more config scripts
	* rsvg-convert.c: Fix some GCC 4.0 build warnings (323936)
	
2005-12-10 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.c: Remove
	* rsvg-convert.c: New utility called 'rsvg-convert'. Can convert a SVG to a PS, PDF, or PNG. Can accept